Closed Bug 584678 Opened 16 years ago Closed 16 years ago

nsAsyncRedirectVerifyHelper.cpp compilation failure

Categories

(Core :: Networking, defect)

x86_64
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
I get a compilation failure on mingw (GCC 4.5.0, I expect it to not be specific to mingw): /home/jacek/mozilla-build/mozilla-central/netwerk/base/src/nsAsyncRedirectVerifyHelper.cpp: In member function 'void nsAsyncRedirectVerifyHelper::ExplicitCallback(nsresult)': /home/jacek/mozilla-build/mozilla-central/netwerk/base/src/nsAsyncRedirectVerifyHelper.cpp:202:9: error: cannot pass objects of non-trivially-copyable type 'class nsCOMPtr<nsIAsyncVerifyRedirectCallback>' through '...' /home/jacek/mozilla-build/mozilla-central/netwerk/base/src/nsAsyncRedirectVerifyHelper.cpp:202:9: error: cannot pass objects of non-trivially-copyable type 'class nsCOMPtr<nsIThread>' through '...' The fix (attached) is to pass raw pointer instead of nsCOMPtr to LOG.
Attachment #463122 - Attachment is patch: true
Attachment #463122 - Flags: review?(jst)
Assignee: nobody → jacek
This is a bit of a guess, but might bug 584418 be a dupe of this?
(In reply to comment #1) > This is a bit of a guess, but might bug 584418 be a dupe of this? It doesn't seem to be related.
Comment on attachment 463122 [details] [diff] [review] fix v1.0 Yup, we want this. Thanks for the patch!
Attachment #463122 - Flags: review?(jst)
Attachment #463122 - Flags: review+
Attachment #463122 - Flags: approval2.0+
Thanks for the review. Pushed to m-c: http://hg.mozilla.org/mozilla-central/rev/efcbc31708f1
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: