Bug 584678 - nsAsyncRedirectVerifyHelper.cpp compilation failure r=jsc a=jst